Add reviewable resource adjustment proposals
